--- a/Explanations.ipynb
+++ b/Explanations.ipynb
@@ -22,13 +22,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# git clone https://github.com/DreRnc/ExplainingExplanations.git\n",
-        "# cd ExplainingExplanations\n",
-        "# pip install -r requirements.txt"
+        "# %git clone https://github.com/DreRnc/ExplainingExplanations.git\n",
+        "# %cd ExplainingExplanations\n",
+        "# %pip install -r requirements.txt"
       ]
     },
     {
@@ -47,20 +47,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "0kOOUYl19UHq"
       },
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "/Users/dre/Desktop/GitRepo/DreRnc/ExplainingExplanations/.venv/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-            "  from .autonotebook import tqdm as notebook_tqdm\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "from datasets import load_dataset\n",
         "\n",
@@ -69,19 +60,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Shape of training_set:  (549367, 6)\n",
-            "Shae of validation_set:  (9842, 6)\n",
-            "Shape of test_set:  (9824, 6)\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "training_set = dataset['train']\n",
         "validation_set = dataset['validation']\n",
@@ -94,44 +75,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "{'premise': 'A person on a horse jumps over a broken down airplane.',\n",
-              " 'hypothesis': 'A person is training his horse for a competition.',\n",
-              " 'label': 1,\n",
-              " 'explanation_1': 'the person is not necessarily training his horse',\n",
-              " 'explanation_2': '',\n",
-              " 'explanation_3': ''}"
-            ]
-          },
-          "execution_count": 4,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "training_set[0]"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Shape of train_small:  (5000, 6)\n",
-            "Shape of valid_small:  (5000, 6)\n",
-            "Shape of test_small:  (5000, 6)\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "n_train = n_valid = n_test = 5000\n",
         "\n",
@@ -153,20 +108,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "jyczhxOR-jwU"
       },
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "You are using the default legacy behaviour of the <class 'transformers.models.t5.tokenization_t5.T5Tokenizer'>. This is expected, and simply means that the `legacy` (previous) behavior will be used so nothing changes for you. If you want to use the new behaviour, set `legacy=False`. This should only be set if you understand what it means, and thoroughly read the reason why this was added as explained in https://github.com/huggingface/transformers/pull/24565\n",
-            "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "from transformers import T5Tokenizer, T5ForConditionalGeneration\n",
         "\n",
@@ -185,7 +131,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -193,15 +139,7 @@
         "id": "CKG-so0--7ug",
         "outputId": "38dfed95-b25b-4e87-9276-94e555ffeaae"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Bonjour Dre, je pense que la version anglaise est bonne pour nous.\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "input_ids = tokenizer(\"translate English to French: Hello Dre, I think the English version is ok for us.\", return_tensors=\"pt\").input_ids\n",
         "outputs = model.generate(input_ids,  max_new_tokens = 100)\n",
@@ -213,12 +151,12 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 1.3 Zero-shot to Verify Everything is Working"
+        "## 1.3 Zero-shot example to Verify Everything is Working"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -227,7 +165,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -235,23 +173,7 @@
         "id": "BZILJcgoDO9b",
         "outputId": "0be6311d-1473-47db-c9e2-fed580dca801"
       },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "{'premise': 'A person on a horse jumps over a broken down airplane.',\n",
-              " 'hypothesis': 'A person is training his horse for a competition.',\n",
-              " 'label': 1,\n",
-              " 'explanation_1': 'the person is not necessarily training his horse',\n",
-              " 'explanation_2': '',\n",
-              " 'explanation_3': ''}"
-            ]
-          },
-          "execution_count": 9,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "example = training_set[0]\n",
         "example"
@@ -273,22 +195,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "7D2MQG6qJYnI"
       },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "'mnli hypothesis: A person is training his horse for a competition. premise: A person on a horse jumps over a broken down airplane.'"
-            ]
-          },
-          "execution_count": 10,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "prompt = generate_prompt_mnli(example)\n",
         "prompt"
@@ -296,7 +207,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -304,23 +215,7 @@
         "id": "C1roa6HcIi3e",
         "outputId": "521862a6-40d6-4979-f9ed-34071eac41f5"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "neutral\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "/Users/dre/Desktop/GitRepo/DreRnc/ExplainingExplanations/.venv/lib/python3.10/site-packages/transformers/generation/utils.py:1133: UserWarning: Using the model-agnostic default `max_length` (=20) to control the generation length. We recommend setting `max_new_tokens` to control the maximum length of the generation.\n",
-            "  warnings.warn(\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "input_ids = tokenizer(prompt, return_tensors= \"pt\").input_ids\n",
         "\n",
@@ -333,12 +228,83 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "## 1.4  Tokenize the dataset"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "train_small.info"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "train_small[0]['prompt'] = 'hello'\n",
+        "\n",
+        "train_small[0]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "train_small.features"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from functools import partial\n",
+        "from src.utils import tokenize_function\n",
+        "import time"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "tokenize_mapping = partial(tokenize_function, tokenizer = tokenizer)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "time_init = time.time()\n",
+        "train_small_tokenized = train_small.map(tokenize_mapping, batched=True)\n",
+        "valid_small_tokenized = valid_small.map(tokenize_mapping, batched=True)\n",
+        "test_small_tokenized = test_small.map(tokenize_mapping, batched=True)\n",
+        "time_end = time.time()\n",
+        "\n",
+        "print(\"Time taken to tokenize: \", time_end - time_init)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "# 2.0 Task 1: Zero-shot evaluation"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -348,33 +314,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "100%|██████████| 5000/5000 [04:51<00:00, 17.15it/s]"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Accuracy zero shot on test set:  0.717\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "\n",
         "correct = 0\n",
         "seen = 0\n",
         "\n",
