Pushing tokenized dataset

--- a/Explanations.ipynb
+++ b/Explanations.ipynb
@@ -26,9 +26,9 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# %git clone https://github.com/DreRnc/ExplainingExplanations.git\n",
+        "# !git clone https://github.com/DreRnc/ExplainingExplanations.git\n",
         "# %cd ExplainingExplanations\n",
-        "# %pip install -r requirements.txt"
+        "# !pip install -r requirements.txt"
       ]
     },
     {
@@ -287,12 +287,42 @@
       "outputs": [],
       "source": [
         "time_init = time.time()\n",
-        "train_small_tokenized = train_small.map(tokenize_mapping, batched=True)\n",
-        "valid_small_tokenized = valid_small.map(tokenize_mapping, batched=True)\n",
-        "test_small_tokenized = test_small.map(tokenize_mapping, batched=True)\n",
+        "train_small_tokenized = train_small.map(tokenize_mapping, batched=True).with_format(\"torch\")\n",
+        "valid_small_tokenized = valid_small.map(tokenize_mapping, batched=True).with_format(\"torch\")\n",
+        "test_small_tokenized = test_small.map(tokenize_mapping, batched=True).with_format(\"torch\")\n",
         "time_end = time.time()\n",
         "\n",
-        "print(\"Time taken to tokenize: \", time_end - time_init)"
+        "print(\"Time taken to tokenize: \", time_end - time_init)\n",
+        "print(\"Shape of train_small_tokenized: \", train_small_tokenized.shape)\n",
+        "print(\"Shape of valid_small_tokenized: \", valid_small_tokenized.shape)\n",
+        "print(\"Shape of test_small_tokenized: \", test_small_tokenized.shape)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "print(train_small_tokenized[0])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "train_small_tokenized.features"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "print(type(train_small_tokenized[0]['input_ids']))"
       ]
     },
     {
@@ -309,7 +339,26 @@
       "outputs": [],
       "source": [
         "from src.utils import evaluate_output_mnli\n",
-        "from tqdm import tqdm"
+        "from tqdm import tqdm\n",
+        "import torch"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "correct = 0\n",
+        "seen = 0\n",
+        "\n",
+        "for tokenized_dp in tqdm(train_small_tokenized):\n",
+        "    input_ids = tokenized_dp['input_ids'].unsqueeze(0)\n",
+        "    outputs = model.generate(input_ids)\n",
+        "    output = tokenizer.decode(outputs[0], skip_special_tokens=True)\n",
+        "    correct += evaluate_output_mnli(output, tokenized_dp['label'])\n",
+        "\n",
+        "print(\"Accuracy zero shot on test set: \", correct/n_test)"
       ]
     },
     {
