--- a/Explanations.ipynb
+++ b/Explanations.ipynb
@@ -3,7 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
         "id": "view-in-github"
       },
       "source": [
@@ -23,24 +22,30 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "cpKHbnzGEWLt"
+      },
       "outputs": [],
       "source": [
-        "# !git clone https://github.com/DreRnc/ExplainingExplanations.git\n",
-        "# %cd ExplainingExplanations\n",
-        "# !pip install -r requirements.txt"
+        "!git clone https://github.com/DreRnc/ExplainingExplanations.git\n",
+        "%cd ExplainingExplanations\n",
+        "!pip install -r requirements.txt"
       ]
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "yYNhbZhXEWLu"
+      },
       "source": [
         "# 1.0 Preparation\n"
       ]
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "UZvGBSfFEWLv"
+      },
       "source": [
         "## 1.1 Loading Dataset"
       ]
@@ -61,7 +66,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "Zugxo8WgEWLw"
+      },
       "outputs": [],
       "source": [
         "training_set = dataset['train']\n",
@@ -76,7 +83,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "k8kaX3QbEWLw"
+      },
       "outputs": [],
       "source": [
         "training_set[0]"
@@ -85,7 +94,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "SLgS-BVbEWLx"
+      },
       "outputs": [],
       "source": [
         "n_train = n_valid = n_test = 5000\n",
@@ -101,7 +112,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "FFt0woXsEWLx"
+      },
       "source": [
         "## 1.2 Loading T5 Model"
       ]
@@ -133,11 +146,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "CKG-so0--7ug",
-        "outputId": "38dfed95-b25b-4e87-9276-94e555ffeaae"
+        "id": "CKG-so0--7ug"
       },
       "outputs": [],
       "source": [
@@ -149,7 +158,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "RxesGnaFEWLz"
+      },
       "source": [
         "## 1.3 Zero-shot example to Verify Everything is Working"
       ]
@@ -157,7 +168,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "oVqJLHXJEWLz"
+      },
       "outputs": [],
       "source": [
         "from src.utils import generate_prompt_mnli"
@@ -167,11 +180,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "BZILJcgoDO9b",
-        "outputId": "0be6311d-1473-47db-c9e2-fed580dca801"
+        "id": "BZILJcgoDO9b"
       },
       "outputs": [],
       "source": [
@@ -181,14 +190,16 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "ezSzRF_PEWLz"
+      },
       "source": [
         "Generating the prompt:\n",
         "\n",
         "<b><u> mnli hypothesis: </b></u> The St. Louis Cardinals have always won. <b><u> premise: </b></u> yeah well losing is i mean i’m i’m originally from Saint Louis and Saint Louis Cardinals when they were there were uh a mostly a losing team but\n",
         "\n",
-        "Output: \n",
-        "* 0: Entailment \n",
+        "Output:\n",
+        "* 0: Entailment\n",
         "* 1: Neutral\n",
         "* 2: Contradiction"
       ]
@@ -209,11 +220,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "C1roa6HcIi3e",
-        "outputId": "521862a6-40d6-4979-f9ed-34071eac41f5"
+        "id": "C1roa6HcIi3e"
       },
       "outputs": [],
       "source": [
@@ -226,7 +233,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "DQvhd35vEWL1"
+      },
       "source": [
         "## 1.4  Tokenize the dataset"
       ]
@@ -234,7 +243,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "BfF032XGEWL1"
+      },
       "outputs": [],
       "source": [
         "train_small.info"
@@ -243,7 +254,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "SYweTWpKEWL1"
+      },
       "outputs": [],
       "source": [
         "train_small[0]['prompt'] = 'hello'\n",
@@ -254,7 +267,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "K6EukG0TEWL1"
+      },
       "outputs": [],
       "source": [
         "train_small.features"
@@ -263,7 +278,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "HbuROCKBEWL2"
+      },
       "outputs": [],
       "source": [
         "from functools import partial\n",
@@ -274,7 +291,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "IlQmLxMtEWL2"
+      },
       "outputs": [],
       "source": [
         "tokenize_mapping = partial(tokenize_function, tokenizer = tokenizer)"
@@ -283,7 +302,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "yRqHwqpOEWL3"
+      },
       "outputs": [],
       "source": [
         "time_init = time.time()\n",
@@ -301,7 +322,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "CytpggLvEWL3"
+      },
       "outputs": [],
       "source": [
         "print(train_small_tokenized[0])"
@@ -310,7 +333,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "g23z96xgEWL3"
+      },
       "outputs": [],
       "source": [
         "train_small_tokenized.features"
@@ -319,7 +344,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "funN-9E1EWL3"
+      },
       "outputs": [],
       "source": [
         "print(type(train_small_tokenized[0]['input_ids']))"
@@ -327,7 +354,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "s4SNHcxuEWL3"
+      },
       "source": [
         "# 2.0 Task 1: Zero-shot evaluation"
       ]
@@ -335,7 +364,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "MOwNiKJdEWL3"
+      },
       "outputs": [],
       "source": [
         "from src.utils import evaluate_output_mnli\n",
@@ -346,57 +377,178 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "murMQ-wCEWL4"
+      },
       "outputs": [],
       "source": [
-        "correct = 0\n",
-        "seen = 0\n",
+        "# correct = 0\n",
+        "# seen = 0\n",
         "\n",
-        "for tokenized_dp in tqdm(train_small_tokenized):\n",
-        "    input_ids = tokenized_dp['input_ids'].unsqueeze(0)\n",
-        "    outputs = model.generate(input_ids)\n",
-        "    output = tokenizer.decode(outputs[0], skip_special_tokens=True)\n",
-        "    correct += evaluate_output_mnli(output, tokenized_dp['label'])\n",
+        "# for tokenized_dp in tqdm(train_small_tokenized):\n",
+        "    # input_ids = tokenized_dp['input_ids'].unsqueeze(0)\n",
+        "    # outputs = model.generate(input_ids)\n",
+        "    # output = tokenizer.decode(outputs[0], skip_special_tokens=True)\n",
+        "    # correct += evaluate_output_mnli(output, tokenized_dp['label'])\n",
         "\n",
-        "print(\"Accuracy zero shot on test set: \", correct/n_test)"
+        "# print(\"Accuracy zero shot on test set: \", correct/n_test)"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "uKIQqziDEWL4"
+      },
       "outputs": [],
       "source": [
-        "correct = 0\n",
-        "seen = 0\n",
+        "# correct = 0\n",
+        "# seen = 0\n",
         "\n",
-        "for datapoint in tqdm(test_small):\n",
-        "    prompt = generate_prompt_mnli(datapoint)\n",
-        "    input_ids = tokenizer(prompt, return_tensors= \"pt\").input_ids\n",
-        "    outputs = model.generate(input_ids)\n",
-        "    output = tokenizer.decode(outputs[0], skip_special_tokens=True)\n",
-        "    correct += evaluate_output_mnli(output, datapoint['label'])\n",
+        "# for datapoint in tqdm(test_small):\n",
+        "    # prompt = generate_prompt_mnli(datapoint)\n",
+        "    # input_ids = tokenizer(prompt, return_tensors= \"pt\").input_ids\n",
+        "    # outputs = model.generate(input_ids)\n",
+        "    # output = tokenizer.decode(outputs[0], skip_special_tokens=True)\n",
+        "    # correct += evaluate_output_mnli(output, datapoint['label'])\n",
         "\n",
-        "print(\"Accuracy zero shot on test set: \", correct/n_test)"
+        "# print(\"Accuracy zero shot on test set: \", correct/n_test)"
       ]
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "bQoQE4naEWL4"
+      },
       "source": [
         "# 3.0 Task 2: Fine tuning without explanations"
       ]
     },
     {
       "cell_type": "code",
+      "source": [
+        "!pip install evaluate\n",
+        "!pip install transformers[torch]"
+      ],
+      "metadata": {
+        "id": "aUxs9O7BGRok"
+      },
       "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "import evaluate\n",
+        "\n",
+        "metric = evaluate.load(\"accuracy\")"
+      ],
+      "metadata": {
+        "id": "2DSm47RYGNvZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def compute_metrics(eval_pred):\n",
+        "    logits, labels = eval_pred\n",
+        "    predictions = np.argmax(logits, axis=-1)\n",
+        "    return metric.compute(predictions=predictions, references=labels)"
+      ],
+      "metadata": {
+        "id": "ThL1ghEKPVLF"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from transformers import TrainingArguments, Trainer\n",
+        "\n",
+        "training_args = TrainingArguments(output_dir=\"test_trainer\", evaluation_strategy=\"epoch\")"
+      ],
+      "metadata": {
+        "id": "OHxW0vUdGLSa"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from transformers import AutoTokenizer, T5ForConditionalGeneration\n",
+        "\n",
+        "tokenizer = AutoTokenizer.from_pretrained(\"t5-small\")\n",
+        "model = T5ForConditionalGeneration.from_pretrained(\"t5-small\")"
+      ],
+      "metadata": {
+        "id": "D4hYJM7lT0Ec"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# for tokenized_dp in train_small_tokenized:\n",
+        "    # input_ids_tensor = tokenized_dp['input_ids']\n",
+        "    # tokenized_dp['input_ids'] = torch.unsqueeze(input_ids_tensor, dim=0)"
+      ],
+      "metadata": {
+        "id": "lIwV4j47dgHF"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "trainer = Trainer(\n",
+        "    model=model,\n",
+        "    args=training_args,\n",
+        "    train_dataset=train_small_tokenized,\n",
+        "    eval_dataset=test_small_tokenized,\n",
+        "    compute_metrics=compute_metrics\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "mUa0tn4jGIgS"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(train_small_tokenized.num_rows):\n",
+        "  train_small_tokenized[i][\"input_ids\"] = train_small_tokenized[i][\"input_ids\"].unsqueeze(0)"
+      ],
+      "metadata": {
+        "id": "74EgwvGTZITr"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "trainer.train()"
+      ],
+      "metadata": {
+        "id": "2HY5nl2RHx5J"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "BMD_Zq5zEWL4"
+      },
       "source": [
         "# 4.0 Task 4: Making the model generate explanations"
       ]
@@ -404,16 +556,23 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "fnW0W89cEWL4"
+      },
       "outputs": [],
       "source": []
     }
   ],
   "metadata": {
     "colab": {
-      "authorship_tag": "ABX9TyOD1t8GCLbe50z4YUG+KN3k",
-      "include_colab_link": true,
-      "provenance": []
+      "provenance": [],
+      "collapsed_sections": [
+        "UZvGBSfFEWLv",
+        "FFt0woXsEWLx",
+        "RxesGnaFEWLz",
+        "DQvhd35vEWL1",
+        "s4SNHcxuEWL3"
+      ]
     },
     "kernelspec": {
       "display_name": "Python 3",
