--- a/Explanations.ipynb
+++ b/Explanations.ipynb
@@ -23,6 +23,15 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "colab = False"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -30,11 +39,21 @@
         "id": "cpKHbnzGEWLt",
         "outputId": "4e2e9cd2-5129-4a21-b1e6-fe30647eb165"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "SyntaxError",
+          "evalue": "invalid syntax. Maybe you meant '==' or ':=' instead of '='? (1711734592.py, line 1)",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;36m  Cell \u001b[0;32mIn[1], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    if colab = True # !git clone https://github.com/DreRnc/ExplainingExplanations.git\u001b[0m\n\u001b[0m       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax. Maybe you meant '==' or ':=' instead of '='?\n"
+          ]
+        }
+      ],
       "source": [
-        "# !git clone https://github.com/DreRnc/ExplainingExplanations.git\n",
-        "# %cd ExplainingExplanations\n",
-        "# !pip install -r requirements.txt"
+        "if colab:\n",
+        "    !git clone https://github.com/DreRnc/ExplainingExplanations.git\n",
+        "    %cd ExplainingExplanations\n",
+        "    !pip install -r requirements.txt"
       ]
     },
     {
