--- a/Explanations.ipynb
+++ b/Explanations.ipynb
@@ -53,7 +53,7 @@
         "if colab:\n",
         "    !git clone https://github.com/DreRnc/ExplainingExplanations.git\n",
         "    %cd ExplainingExplanations\n",
-        "    !pip install -r requirements.txt"
+        "    %pip install -r requirements.txt"
       ]
     },
     {
