horrible way of solving dependencies with colab

--- a/Explanations.ipynb
+++ b/Explanations.ipynb
@@ -585,14 +585,22 @@
       },
       "outputs": [],
       "source": [
-        "train_small_tokenized = train_small_tokenized.rename_column(\"label\", \"labels\")\n",
-        "train_small_tokenized = train_small_tokenized.remove_columns([\"premise\", \"hypothesis\", \"explanation_1\", \"explanation_2\", \"explanation_3\"])\n",
+        "if colab:\n",
+        "    train_small_tokenized = train_small_tokenized.remove_columns([\"premise\", \"hypothesis\", \"explanation_1\", \"explanation_2\", \"explanation_3\", \"label\"])\n",
         "\n",
-        "valid_small_tokenized = valid_small_tokenized.rename_column(\"label\", \"labels\")\n",
-        "valid_small_tokenized = valid_small_tokenized.remove_columns([\"premise\", \"hypothesis\", \"explanation_1\", \"explanation_2\", \"explanation_3\"])\n",
+        "    valid_small_tokenized = valid_small_tokenized.remove_columns([\"premise\", \"hypothesis\", \"explanation_1\", \"explanation_2\", \"explanation_3\", \"label\"])\n",
         "\n",
-        "test_small_tokenized = test_small_tokenized.rename_column(\"label\", \"labels\")\n",
-        "test_small_tokenized = test_small_tokenized.remove_columns([\"premise\", \"hypothesis\", \"explanation_1\", \"explanation_2\", \"explanation_3\"])"
+        "    test_small_tokenized = test_small_tokenized.remove_columns([\"premise\", \"hypothesis\", \"explanation_1\", \"explanation_2\", \"explanation_3\", \"label\"])\n",
+        "    \n",
+        "else:\n",
+        "    train_small_tokenized = train_small_tokenized.rename_column(\"label\", \"labels\")\n",
+        "    train_small_tokenized = train_small_tokenized.remove_columns([\"premise\", \"hypothesis\", \"explanation_1\", \"explanation_2\", \"explanation_3\"])\n",
+        "\n",
+        "    valid_small_tokenized = valid_small_tokenized.rename_column(\"label\", \"labels\")\n",
+        "    valid_small_tokenized = valid_small_tokenized.remove_columns([\"premise\", \"hypothesis\", \"explanation_1\", \"explanation_2\", \"explanation_3\"])\n",
+        "\n",
+        "    test_small_tokenized = test_small_tokenized.rename_column(\"label\", \"labels\")\n",
+        "    test_small_tokenized = test_small_tokenized.remove_columns([\"premise\", \"hypothesis\", \"explanation_1\", \"explanation_2\", \"explanation_3\"])"
       ]
     },
     {
